[package]
name = "blog_os"
version = "0.1.0"
authors = ["zky20020915@gmail.com"]
edition = "2018"

# 使用 `cargo build` 编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用 `cargo build --release` 编译时需要的配置
[profile.release]
panic = "abort" # 禁用 panic 时栈展开


# in Cargo.toml

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.9.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"


[package.metadata.bootimage]
build-command = ["xbuild"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33  
test-timeout = 300          # (in seconds)

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false